--- a/index.html
+++ b/index.html
@@ -14,19 +14,21 @@
   </head>
   <body>
     <h2 class="site-title">What to eat for dinner?</h2>
-    <h3 id="title"></h3>
-    <div class="content">
-      <img class="image" id="image" src="" alt="" />
-      <div>
-        <h4>Ingredients</h4>
-        <ul id="ingredients"></ul>
+    <div class="wrap">
+      <h3 id="title"></h3>
+      <div class="content">
+        <img class="image" id="image" src="" alt="" />
+        <div>
+          <h4>Ingredients</h4>
+          <ul id="ingredients"></ul>
+        </div>
+        <div>
+          <h4>Instructions</h4>
+          <ol class="content_instructions" id="instructions"></ol>
+        </div>
       </div>
-      <div>
-        <h4>Instructions</h4>
-        <ol class="content_instructions" id="instructions"></ol>
-      </div>
+      <button class="button" id="btn">Another One</button>
     </div>
-    <button class="button" id="btn">Another One</button>
     <script src="./script.js"></script>
   </body>
 </html>
